# carms-data-platform

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  alembic.ini  mkdocs.yml  pyproject.toml  requirements-demo.txt  ruff.toml
alembic/: env.py
alembic/versions/: 20260211_0001_create_core_schema.py  20260212_0002_add_program_embeddings.py  20260212_0003_match_scenarios.py
carms/analytics/: __init__.py  assets.py  preferences.py  simulation.py
carms/api/: deps.py  main.py  schemas.py
carms/api/routes/: analytics.py  disciplines.py  geomap.py  pipeline.py  programs.py  semantic.py
carms/core/: config.py  database.py
carms/models/: bronze.py  gold.py  silver.py
carms/pipelines/: checks.py  definitions.py
carms/pipelines/bronze/: assets.py
carms/pipelines/gold/: assets.py
carms/pipelines/silver/: assets.py
carms/static/map/: canada.geojson
docs/: analytics.md  api-contract.md  api.md  architecture.md  carms_hiring_audit.md  deployment.md  index.md  insights.html  interview_project_mastery_plan.md  performance.md
notebooks/: insights.qmd
scripts/: demo-windows.ps1  demo.ps1  demo.sh  demo_local.ps1  demo_local.sh  seed_demo.py  wait_for_http.py
tests/: test_api.py  test_api_analytics.py  test_assets.py  test_models.py  test_preferences.py  test_semantic.py  test_simulation.py
